[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nc-claw"
version = "0.7.1"
authors = [
  { name = "NCstudio", email = "ncstidio@1024idc.com" }
]
description = "Multi-Agent AI Terminal Assistant"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["ai", "terminal", "multi-agent", "chat", "cli", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/NCpersonal/NC-Claw-Web"
Repository = "https://github.com/NCpersonal/NC-Claw-Web"

[project.scripts]
claw = "nc_claw.claw:main"

[tool.setuptools.package-data]
nc_claw = ["*.html", "*.css", "*.js"]
